# zephyr_workflows

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml  driver.yml
.github/workflows/: application.yml  board.yml  driver.yml  lib.yml  notion.yml  shield.yml
generate_manifest/: action.yml
update_manifest/: README.md  action.yml  pyproject.toml
update_manifest/update_manifest/: update.py
zephyr_build/: action.yml
zephyr_init/: action.yml
zephyr_twister/: action.yml
